NIFI-1355-rebase2 Fixed a delete Path method causing a build failure.